[package]
name = "aws-lc-rs-522"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-lc-rs = { version = "1.15.2", features = ["bindgen"] }
clap = { version = "4.5.53", features = ["derive"] }
hex = "0.4.3"
rand = "0.9.2"

[build-dependencies]
cc = "1"

[patch.crates-io]
aws-lc-sys = { path = "./crates/aws-lc-sys-0.35.0/" }
